php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #4447 FT_PREFETCHTEXT flag in imap_fetchheader() not working
Submitted: 2000-05-15 00:35 UTC Modified: 2000-08-01 11:10 UTC
From: sclausen at protocol dot com dot au Assigned:
Status: Closed Package: IMAP related
PHP Version: 4.0 Release Candidate 2 OS: Linux 2.2.5
Private report: No CVE-ID: None
 [2000-05-15 00:35 UTC] sclausen at protocol dot com dot au
The flag FT_PREFETCHTEXT is not having any affect on the message string returned from the function 'imap_fetchheader()' when it should (according to the documentation) cause the whole RFC822 message text to be returned.

$message = imap_fetchheader($stream, 1, FT_PREFETCHTEXT);

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2000-07-26 02:32 UTC] sniper@php.net
I'm investigating this..it might be that c-client-lib doesn't even provide this feature. Even when it is
documented in their documents otherwise.

--Jani
 [2000-08-01 11:10 UTC] sniper@php.net
Fixed in CVS. Thanks!

--Jani
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC