@- Fixed bug in imap_fetchheader() where using FT_PREFETCHTEXT didn't return @  the body. Bug #4447. (Jani)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@29446 c90b9560-bf6c-de11-be94-00142212c4b1